# aegis-test-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  setup-emulator.bat  setup-emulator.sh
.github/: copilot-instructions.md
src/aegis_agents/: __init__.py
src/aegis_agents/shared/: __init__.py
src/aegis_agents/shared/contracts/: __init__.py  models.py
src/aegis_agents/shared/contracts/requests/: __init__.py  test_generation.py
src/aegis_agents/shared/contracts/responses/: __init__.py  test_planning.py
src/aegis_agents/shared/messaging/: __init__.py  config.py  factory.py  interfaces.py  pubsub.py  topics.py  types.py
src/aegis_agents/shared/messaging/backends/: __init__.py  pubsub.py  rabbitmq.py
src/aegis_agents/test_analyzer/: __init__.py  contracts.py  handler.py  service.py
src/aegis_agents/test_executor/: __init__.py  contracts.py  handler.py  service.py
src/aegis_agents/test_generator/: __init__.py  contracts.py  handler.py  service.py
src/aegis_agents/test_planner/: __init__.py  contracts.py  handler.py  service.py
tests/: __init__.py
tests/test_generator/: __init__.py
tests/test_planner/: __init__.py
